Images not responsive fixed

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ html {
 body {
     font-family: 'JosefinSans';
     margin: 0;
-    padding: 0;
-    border: 0;
+    min-height: 100vh;
+    position: relative;
 }
 
 header {
@@ -107,9 +107,32 @@ header {
     margin: 30px 0px 20px 0px;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
 .f-content {
+    clear: both;
+    position: relative;
+    margin-top: 100px;
+    height: auto;
+    overflow: hidden;
+    border-top: solid blue;
+}
+
+footer {
     display: flex;
     justify-content: space-between;
-    border-top: solid blue;
-    box-shadow: 10px 0px 15px;    
+}
+
+footer a {
+    color: red;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: rgb(128, 0, 0);
+    text-decoration: none;
 }
